vtl-prov/docs/configuration/provenance/kubernetes/blueprint/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blueprint-trevas-provenance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blueprint-trevas-provenance
  template:
    metadata:
      labels:
        app: blueprint-trevas-provenance
    spec:
      containers:
        - name: blueprint-trevas-provenance
          image: ghcr.io/zazuko/blueprint:dev-main-20240626132259
          imagePullPolicy: IfNotPresent
