vtl-prov/docs/configuration/provenance/kubernetes/blueprint/service.yml
apiVersion: v1
kind: Service
metadata:
  name: blueprint-trevas-provenance
spec:
  ports:
    - name: http
      targetPort: 80
      port: 80
  selector:
    app: blueprint-trevas-provenance
